Revision history for Perl module URI::Find.

Next
    New Features
    * Added a urifind program. (Darren Chamberlain)


20100211  Thu Feb 11 04:02:26 PST 2010
    Bug Fixes
    * Finding URIs inside brackets was pretty badly broken by
      the last release.  (Michael Peters)


20090319  Thu Mar 19 12:17:53 PDT 2009
    Bug Fixes
    * Schemeless now ignores the case of the TLD.

    New Features
    * Updated the list of accepted domains for finding schemeless URIs
      from the latest ICANN list.

    Docs
    * Add LICENSE section
    * Remove wildly out of date CAVEATS
    * Added an example of how to get a list of all URIs.
    * Updated INSTALL section to reflect new dependencies and Module::Build
      installation process
    * Regenerated the README file


20090316  Mon Mar 16 16:18:10 PDT 2009
    New Features
    * Added optional replacement function to find(). Now you 
      can not only replace URLs found, but also the rest of the text around
      them in one fell swoop. (Mike Schilli) [rt.cpan.org 20486]
    * Whitespace inside <...> is now ignored as per the suggestion of
      RFC 3986 appendix C. [rt.cpan.org 20483]

    Other
    * Michael G Schwern is now primary maintainer again.  Thanks for all your
      work, Roderick!
    * Repository moved to http://github.com/schwern/uri-find
    * Now requires Test::More
    * Verisoning scheme changed to ISO date integers
    * Minimum Perl version is now 5.6.0.


0.16 Fri Jul 22 06:00:24 EDT 2005
    - Oops, make the URI::Find::Schemeless->top_level_domain_re case
      insensitive, as it should be and the docs claimed it was.  Thanks
      to Todd Eigenschink.


0.15 Tue Mar 22 07:23:17 EST 2005
    - Have all functions croak if invoked with the wrong number of
      arguments.  Add URI::Find->badinvo.
        https://rt.cpan.org/NoAuth/Bug.html?id=1845
    - Mention DARREN's urifind script in the man page.
    - Oops, URI::URL::strict was turned on and left on.  Put it back the